--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="1;url=singing-telegrams-los-angeles.html">
         <script type="text/javascript">
-            window.location.href = "http://example.com"
+            window.location.href = "singing-telegrams-los-angeles.html"
         </script>
         <title>Page Redirection</title>
     </head>
