Update and rename singing-telegrams-los-angeles.php to singing-telegrams-los-angeles.html

--- a/singing-telegrams-los-angeles.html
+++ b/singing-telegrams-los-angeles.html
@@ -38,7 +38,7 @@
 	<!-- <link rel="canonical" href="//FunnyGirlTelegrams.com/" /> -->
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="apple-touch-icon" href="apple-touch-icon.png" />
-	<link rel="stylesheet" href="css/style.php?v=20110802a" />
+	<link rel="stylesheet" href="css/style.css" />
 	<script src="js/modernizr-1.7.min.js"></script>
 	<script src="js/flowplayer-3.2.6.min.js"></script>
 </head>
