--- a/singing-telegrams-los-angeles.html
+++ b/singing-telegrams-los-angeles.html
@@ -287,7 +287,7 @@
 
 <aside id="socialicons">
 	<div title="'Like' me on Google"><g:plusone></g:plusone></div>
-	<div title="Find me on Google Places"><a href="http://maps.google.com/maps/place?cid=17809209457283989079&hl=en"><img src="images/google-places.png" width="36" height="67" alt="Google Places" /></a></div>
+	<div title="Find me on Google Places"><a href="https://www.google.com/maps/place/Funnygirl+Telegrams/@33.5951024,-117.9646057,8.5z/data=!4m5!3m4!1s0x80c2b944a666b35f:0xc5aac34f46e5c51b!8m2!3d34.059641!4d-118.3803664"><img src="images/google-places.png" width="36" height="67" alt="Google Places" /></a></div>
 	<div title="'Check In' on Yelp"><a href="http://www.yelp.com/biz/funnygirl-telegrams-los-angeles"><img src="images/yelp.png" width="67" height="67" alt="Yelp" /></a></div>
 	<div title="Find me on Yahoo Local"><a href="http://local.yahoo.com/info-85545714-funnygirl-telegrams-los-angeles;_ylt=AmCmEdYtDuhZTdHK5fOteUiHNcIF;_ylv=3?csz=Los+Angeles%2C+CA"><img src="images/yahoo.png" width="67" height="67" alt="Yahoo" /></a></div>
 	<div title="Find me on Facebook"><a href="http://www.facebook.com/profile.php?id=100002578192161"><img src="images/facebook.png" width="67" height="67" alt="Facebook" /></a></div>
